Add Rest Client with test

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Custom fonts for this template -->
     <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/css/landing-page.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
   <body>
       <nav class="navbar navbar-light bg-black static-top">
         <div class="container">
-          <a class="navbar-brand text-primary" href="#">It&#8217;s All about Integration</a>
+          <a class="navbar-brand text-primary" style="font-family: 'Ubuntu Condensed', sans-serif !important; font-size: 30px !important;" href="#">It&#8217;s All about Integration</a>
           <img src="static/logo.png" class="img-responsive" alt="Newtoms">
         </div>
       </nav>
